# pennyearned-server

./: '  .gitignore  Makefile  README.md  SECURITY.md  example.json  go.mod  go.sum  gqlgen.yml  server.go  serverless.yml  tags  test.json
auth/: .env.py  .gitignore  Makefile  email.html  email.mjml  go.mod  go.sum  package-lock.json  package.json  stack.sh  stack.yml  tags
auth/cmd/server/: server.go
auth/migrations/: 000001_create_users_table.up.sql
auth/migrations/0000001/: up.sql
auth/pkg/initialize/: initialize.go
auth/scripts/: build.sh  clean.sh  stack.sh
auth/src/: globals.ts  index.ts
cmd/server/: server.go
examples/: example_json_instructions.md  example_new_expense.json  example_update_expense.json  example_verify.json
expenses/: .env  .golangci.yml  Makefile  go.mod  go.sum  gqlgen.yml  server.go  stack.yml  tags
expenses/graph/: generated.go  schema.graphqls  schema.resolvers.go
expenses/scripts/: build.sh  run.sh  runbuild.sh  stack.sh
expenses_rust/: .gitignore  Cargo.toml  Makefile  build.rs
expenses_rust/migrations/1/: down.sql  up.sql
expenses_rust/scripts/: debug.sh  stack.sh
expenses_rust/src/: lib.rs  main.rs
expenses_rust/src/api/: initializer.rs  mod.rs
expenses_rust/src/api/handlers/: expenses.rs
expenses_rust/src/db/: setup.rs
graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go
graph/model/: models_gen.go
pkg/setup/: setup.go
scripts/: buildgql.sh  run.sh  rungql.sh
terraform/: build.tf  gateways.tf  network.tf  security.tf  subnets.tf  terraform.tfstate  terraform.tfstate.backup
(+57 files in other folders)
