[package]
name = "expenses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
axum-macros = "0.3.7"
chrono = {version = "0.4.24", features = ["serde"]}
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
sqlx = {version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"]}
tokio = {version ="1.27.0", features = ["full"]}
uuid = { version = "1.3.0", features = ["v4", "serde"] }
